2018-10-15  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dvispc.c: Use common routine for EXE2MODIFY and EXE2CHECK
	for simplicity.
	* dvispc.test: Add tests for consistency between EXE2MODIFY
	and EXE2CHECK.
	* tests/oldindep.dry, tests/tpicpn.dry, tests/tpicsh.dry,
	tests/reverse.dry, tests/first.dry, tests/firstpn.dry:
	New tests.
	* Makefile.am: Adjusted.

2018-10-14  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dvispc.c: Fix a bug that modification of non-stack
	specials was almost broken (my fault when prior scanning
	was introduced). Minimize correction for tpic_pn, report
	effective tpic_pn properly.
	* tests/tpicpn.{tex,dvi}, tests/tpicsh.{tex,dvi},
	tests/first.{tex,dvi}, tests/firstpn.{tex,dvi}: New tests.
	* Makefile.am: Adjusted.
	* configure.ac: Version 20181014.

2018-10-13  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dvispc.c: Stop support for pdf:bann, pe:eann which was
	not working properly.
	* chkdvifont.test, dvispc.test: Reconstruct tests.
	* tests/annot.{tex,dvi}, tests/longspec.{tex,dvi},
	tests/flatnest.{tex,dvi}: Prepared for future work.
	* Makefile.am: Adjusted.

2018-10-12  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dvispc.c: Append .dvi suffix for DVI output.
	* dvispc.test: Test omitted .dvi suffix.
	* Makefile.am: Adjusted.

2018-10-11  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dvispc.c: Support page-independence even with long
	specials. Use MAX_... constants for error messages.
	* dvispc.test: Test long specials.
	* tests/longspec.{tex,dvi}: New tests.
	* Makefile.am: Adjusted.

2018-10-10  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dvispc.c: Clean up code, more comments. Mostly revert
	the change on 2018-10-06, "Change option handling for
	future extensions" and change EXE2INDEP -> EXE2MODIFY.
	Make sure outfile string is non-empty.
	* chkdvifont.c: Do not stop for usage, always show all.
	* dvispc.test: Test pipe input/output.
	* chkdvifont.man, dvispc.man: More info.